--- a/index.html
+++ b/index.html
@@ -3,111 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            text-align: center;
-            width: 300px;
-        }
-
-        input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        .btn-group {
-            display: flex;
-            justify-content: space-between;
-            gap: 5px;
-            margin-bottom: 20px;
-        }
-
-        button {
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        #result-text {
-            font-size: 18px;
-            font-weight: bold;
-            color: #333;
-        }
-    </style>
+    <title>Replace Word</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div class="container">
-        <h1>Simple Calculator</h1>
+    <div class="card">
+        <div class="card-header">
+            <h2>Replace Word</h2>
+            <p>Enter a sentence and swap a word.</p>
+        </div>
         
-        <!-- Input Fields -->
-        <input type="number" id="num1" placeholder="Enter first number">
-        <input type="number" id="num2" placeholder="Enter second number">
-
-        <!-- Buttons -->
-        <div class="btn-group">
-            <button onclick="calculate('+')">Add</button>
-            <button onclick="calculate('-')">Sub</button>
-            <button onclick="calculate('*')">Mult</button>
-            <button onclick="calculate('/')">Div</button>
+        <div class="form-group">
+            <label>Sentence</label>
+            <input type="text" id="sentence" placeholder="I love coding">
         </div>
 
-        <!-- Result Display -->
-        <p id="result-text">Result: 0</p>
+        <div class="row">
+            <div class="form-group">
+                <label>Remove</label>
+                <input type="text" id="target" placeholder="coding">
+            </div>
+            <div class="form-group">
+                <label>Replace with</label>
+                <input type="text" id="replacement" placeholder="coffee">
+            </div>
+        </div>
+
+        <button onclick="replaceWord()">Swap Words</button>
+
+        <div class="result-box" id="result-container" style="display: none;">
+            <span>Result:</span>
+            <p id="result-text"></p>
+        </div>
     </div>
 
-    <script>
-        function calculate(operator) {
-            var input1 = document.getElementById('num1').value;
-            var input2 = document.getElementById('num2').value;
+    <script src="script.js"></script>
 
-            if (input1 === "" || input2 === "") {
-                document.getElementById('result-text').innerText = "Result: Please enter both numbers";
-                return;
-            }
-
-            var n1 = parseFloat(input1);
-            var n2 = parseFloat(input2);
-            var finalResult = 0;
-
-            if (operator === '+') {
-                finalResult = n1 + n2;
-            } else if (operator === '-') {
-                finalResult = n1 - n2;
-            } else if (operator === '*') {
-                finalResult = n1 * n2;
-            } else if (operator === '/') {
-                finalResult = n1 / n2;
-            }
-
-            document.getElementById('result-text').innerText = "Result: " + finalResult;
-        }
-    </script>
 </body>
 </html>
